--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,7 @@
 └─ @biz-hermit/basic-utils@0.0.0
    ├─ licenses: MIT
-   ├─ publisher: bizhermit.com
-   ├─ email: support@bizhermit.com
+   ├─ publisher: Ryoichi Senda
+   ├─ email: rsenda@bizhermit.com
    ├─ url: https://bizhermit.com
    ├─ path: E:\bizhermit\npm\basic-utils
    └─ licenseFile: E:\bizhermit\npm\basic-utils\LICENSE
