update readme, refact

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,6 @@
-└─ @bizhermit/basic-utils@1.0.0
+└─ @bizhermit/basic-utils@1.0.1
    ├─ licenses: MIT
+   ├─ repository: https://github.com/bizhermit/basic-utils
    ├─ publisher: Ryoichi Senda
    ├─ email: rsenda@bizhermit.com
    ├─ url: https://bizhermit.com
