--- a/AUTHORS
+++ b/AUTHORS
@@ -4,6 +4,6 @@
    ├─ publisher: Ryoichi Senda
    ├─ email: rsenda@bizhermit.com
    ├─ url: https://bizhermit.com
-   ├─ path: E:\bizhermit\npm\basic-utils
-   └─ licenseFile: E:\bizhermit\npm\basic-utils\LICENSE
+   ├─ path: E:\bizhermit\npm\dev\basic-utils
+   └─ licenseFile: E:\bizhermit\npm\dev\basic-utils\LICENSE
 
